# react-fastapi-starter

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  prestart.sh  pyproject.toml  start.sh  watcher.py
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 0001_initial.py
backend/src/: main.py
backend/src/auth/: router.py  schemas.py  service.py
backend/src/core/: config.py  database.py  limiter.py
backend/src/items/: models.py  router.py  schemas.py
backend/src/shared/: email.py
backend/tests/: conftest.py  test_email.py
backend/tests/main/: test_health.py  test_items.py  test_main.py
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  Dockerfile.prod  biome.json  index.html  jest.config.ts  nginx.conf  openapi-ts.config.ts  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  start.sh  tsconfig.json  vite.config.ts  watcher.cjs
frontend/e2e/: login.spec.ts  register.spec.ts
frontend/e2e/utils/: auth.ts  user.ts
frontend/src/: hey-api.ts  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  error-boundary.tsx  login-form.tsx  nav-documents.tsx  nav-main.tsx  nav-pro-upgrade.tsx  nav-secondary.tsx  nav-user.tsx  not-found.tsx  pro-modal.tsx  signup-form.tsx  site-header.tsx  theme-toggle.tsx
frontend/src/config/: site.ts
frontend/src/lib/: auth.test.ts  auth.ts  utils.test.ts
frontend/src/providers/: auth-provider.tsx  modal-provider.tsx  query-provider.tsx  user-provider.tsx
frontend/src/routes/: __root.tsx  _authenticated.tsx  auth-callback.tsx  index.tsx  login.tsx  password-recovery.confirm.tsx  (+2 more)
(+31 files in other folders)
